--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pactice</title>
 
+        <!-- font awesome cdn link -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        
+        <!-- All css link -->
     <link rel="stylesheet" href="./assest/css/style.css">
 </head>
 <body>
-    
+    <header id="header">
+        <nav class="navbar">
+            <a href="#">
+                <div class="logo">
+                    <span class="logo-title"> Rahaman'S </span>
+                </div>
+            </a>
+            <ul class="nav">
+                <li class="nav-item"><a href="#" class="nav-link"> home </a></li>
+                <li class="nav-item"><a href="#" class="nav-link"> about </a></li>
+                <li class="nav-item"><a href="#" class="nav-link"> portfolio </a></li>
+                <li class="nav-item"><a href="#" class="nav-link"> blog </a></li>
+                <li class="nav-item"><a href="#" class="nav-link"> contact </a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
