--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="nav-item"><a href="#" class="nav-link"> blog </a></li>
                 <li class="nav-item"><a href="#" class="nav-link"> contact </a></li>
             </ul>
-            <button class="btn">click me</button>
+            <!-- <button class="btn">click me</button> -->
         </nav>
     </header>
 </body>
