add hero section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,29 @@
             </ul>
             <!-- <button class="btn">click me</button> -->
         </nav>
+        <section id="hero" class="hero">
+            <div class="hero__con">
+                <div class="hero__title">
+                    <h1>AL Amin rahaman</h1>
+                </div>
+                <div class="hero__sub__title">
+                    <h4>UI UX & WEB Designer</h4>
+                </div>
+                <div class="hero__deck">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae necessitatibus deleniti distinctio consequatur, dolores ea enim et inventore vitae quibusdam tempore rem accusamus voluptatibus fugit officiis eaque corrupti in sapiente saepe incidunt! Ducimus ea voluptate odit nostrum eveniet iure.
+                    </p>
+                </div>
+                <div class="button">
+                    <button class="btn">here me</button>
+                    <button class="btn">more info</button>
+                </div>
+            </div>
+        </section>
     </header>
-    <main></main>
+    <main>
+
+    </main>
     <footer id="fotter">
         <div class="ft__con">
             <div class="ft__slide">
